# tarpc

./: .gitignore  .travis.yml  Cargo.toml  LICENSE-MIT  README.md  RELEASES.md  RELEASE_NOTES.md  clippy.toml  index.html  rustfmt.toml  search-index.js
.github/: dependabot.yml
aho_corasick/: index.html  struct.AcAutomaton.html  struct.Dense.html  struct.FullAcAutomaton.html  struct.Match.html  struct.Matches.html  struct.MatchesOverlapping.html  struct.Sparse.html  struct.StreamMatches.html  struct.StreamMatchesOverlapping.html  trait.Automaton.html  trait.Transitions.html  type.StateIdx.html
aster/: index.html  sidebar-items.js  struct.AstBuilder.html
benches/: concurrency.rs  latency.rs  single_client.rs
bincode/: enum.SizeLimit.html  index.html  sidebar-items.js  struct.RefBox.html  struct.SliceBox.html  struct.StrBox.html
bincode-transport/: Cargo.toml
bincode-transport/src/: compat.rs  lib.rs
bincode-transport/tests/: bench.rs  cancel.rs  pushback.rs
byteorder/: enum.BigEndian.html  enum.Error.html  enum.LittleEndian.html  index.html  trait.ByteOrder.html  trait.ReadBytesExt.html  trait.WriteBytesExt.html  type.NativeEndian.html  type.Result.html
clippy/: fn.plugin_registrar.html  index.html  macro.if_let_chain!.html  sidebar-items.js
crossbeam/: fn.scope.html  fn.spawn_unsafe.html  index.html  sidebar-items.js  struct.Scope.html  struct.ScopedJoinHandle.html
env_logger/: fn.init.html  (+3 more)
example-service/: .Cargo.toml.swo  Cargo.toml  README.md
example-service/src/: client.rs  lib.rs  main.rs  server.rs
json-transport/: Cargo.toml
json-transport/src/: lib.rs
json-transport/tests/: bench.rs  cancel.rs  pushback.rs
plugins/: Cargo.toml
plugins/src/: lib.rs
plugins/tests/: server.rs  service.rs
rpc/: Cargo.toml
rpc/src/: context.rs  lib.rs
rpc/src/client/: channel.rs  context.rs  dispatch.rs  mod.rs
rpc/src/server/: context.rs  filter.rs  mod.rs  testing.rs  throttle.rs
rpc/src/transport/: channel.rs  mod.rs
rpc/src/util/: deadline_compat.rs  mod.rs  serde.rs  stream.rs
src/plugins/: Cargo.toml
src/plugins/src/: lib.rs
tarpc/: .travis.yml  Cargo.toml  LICENSE  README.md  index.html  install-hooks.sh  macro.service!.html  sidebar-items.js  struct.ServeHandle.html
tarpc/examples/: compression.rs  custom_context.rs  custom_transport.rs  pubsub.rs  readme.rs  server_calling_server.rs  service_registry.rs  tls_over_tcp.rs  tracing.rs
tarpc/examples/certs/: end.cert  end.chain  end.rsa  localhost-key.pem  localhost.pem  rootCA.pem
tarpc/examples/certs/eddsa/: client.cert  client.chain  client.key  end.cert  end.key
tarpc/macros/: index.html  sidebar-items.js
tarpc/macros/serde/: index.html  sidebar-items.js  trait.Deserialize.html  trait.Deserializer.html  trait.Serialize.html  trait.Serializer.html
tarpc/macros/serde/de/: index.html  sidebar-items.js  trait.EnumVisitor.html  trait.Error.html  trait.MapVisitor.html  trait.VariantVisitor.html  trait.Visitor.html
tarpc/protocol/: enum.Error.html  fn.serve_async.html  index.html  sidebar-items.js  struct.Client.html  struct.Config.html  struct.Future.html  struct.Packet.html  struct.ServeHandle.html  trait.Serve.html  type.Result.html
tarpc/protocol/client/: sidebar-items.js  struct.Client.html  struct.Future.html
tarpc/protocol/packet/: sidebar-items.js  struct.Packet.html
tarpc/protocol/server/: fn.serve_async.html  sidebar-items.js  struct.ServeHandle.html  trait.Serve.html
tarpc/src/: cancellations.rs  client.rs  context.rs  lib.rs  macros.rs  protocol.rs  rpc.rs  serde_transport.rs  server.rs  trace.rs  transport.rs  util.rs
tarpc/src/bincode_transport/: mod.rs
tarpc/src/client/: channel.rs  in_flight_requests.rs  stub.rs
tarpc/src/client/stub/: load_balance.rs  mock.rs  retry.rs
tarpc/src/generic_transport/: mod.rs
tarpc/src/json_transport/: mod.rs
tarpc/src/protocol/: client.rs  mod.rs  packet.rs  server.rs
tarpc/src/protocol/async/: client.rs  mod.rs
tarpc/src/rpc/: client.rs  context.rs  mod.rs  server.rs  transport.rs
tarpc/src/rpc/client/: channel.rs  mod.rs
tarpc/src/rpc/server/: filter.rs  mod.rs  testing.rs  throttle.rs
tarpc/src/rpc/transport/: channel.rs  mod.rs
tarpc/src/rpc/util/: mod.rs  serde.rs
tarpc/src/serde_transport/: fory.rs  fory_envelope.rs  mod.rs
tarpc/src/server/: base_channel.rs  contextual_channel.rs  filter.rs  in_flight_requests.rs  incoming.rs  limits.rs  request_hook.rs  testing.rs  throttle.rs  tokio.rs
tarpc/src/server/limits/: channels_per_key.rs  requests_per_channel.rs
tarpc/src/server/request_hook/: after.rs  before.rs  before_and_after.rs
tarpc/src/time/: mod.rs
tarpc/src/time/wasm/: delay_queue.rs  mod.rs
tarpc/src/time/wasm/wheel/: level.rs
tarpc/src/transport/: channel.rs  mod.rs  tcp.rs  unix.rs
tarpc/src/transport/mioco/: tcp.rs
tarpc/src/util/: delay_queue.rs  print_err.rs  serde.rs
tarpc/tests/: codec_parity.rs  compile_fail.rs  dataservice.rs  fory_envelope.rs  fory_transport.rs  latency.rs  proc_macro_hygene.rs  service_functional.rs
tarpc/tests/compile_fail/: must_use_request_dispatch.rs  must_use_request_dispatch.stderr  tarpc_server_missing_async.rs  tarpc_server_missing_async.stderr  tarpc_service_arg_pat.rs  tarpc_service_arg_pat.stderr  tarpc_service_derive_serde.rs  tarpc_service_derive_serde.stderr  tarpc_service_fn_new.rs  tarpc_service_fn_new.stderr  tarpc_service_fn_serve.rs  tarpc_service_fn_serve.stderr
tarpc/tests/compile_fail/no_serde1/: no_explicit_serde_without_feature.rs  no_explicit_serde_without_feature.stderr  no_implicit_serde_without_feature.rs  no_implicit_serde_without_feature.stderr
tarpc/tests/compile_fail/serde1/: deprecated.rs  deprecated.stderr  incompatible.rs  incompatible.stderr  opt_out_serde.rs  opt_out_serde.stderr
tarpc/tests/compile_fail/serde_transport/: must_use_tcp_connect.rs  must_use_tcp_connect.stderr
tarpc/tests/compile_fail/tokio/: must_use_channel_executor.rs  must_use_channel_executor.stderr  must_use_server_executor.rs  must_use_server_executor.stderr
trace/: Cargo.toml  rustfmt.toml
trace/src/: lib.rs
(+3139 files in other folders)
