cargo-features = ["edition"]

[package]
name = "tarpc"
version = "0.12.1"
authors = ["Adam Wright <adam.austin.wright@gmail.com>", "Tim Kuehn <timothy.j.kuehn@gmail.com>"]
edition = "2018"
license = "MIT"
documentation = "https://docs.rs/tarpc"
homepage = "https://github.com/google/tarpc"
repository = "https://github.com/google/tarpc"
keywords = ["rpc", "network", "server", "api", "tls"]
categories = ["asynchronous", "network-programming"]
readme = "README.md"
description = "An RPC framework for Rust with a focus on ease of use."

[badges]
travis-ci = { repository = "google/tarpc" }

[dependencies]
bincode = "1.0"
byteorder = "1.0"
bytes = "0.4"
futures-preview = { git = "https://github.com/rust-lang-nursery/futures-rs", features = ["compat", "tokio-compat"] }
log = "0.4"
net2 = "0.2"
num_cpus = "1.0"
serde = "1.0"
serde_derive = "1.0"
tarpc-plugins = { path = "src/plugins", version = "0.4.0" }
thread-pool = "0.1.1"
tokio-codec = "0.1"
tokio-core = "0.1.6"
tokio-io = "0.1"
tokio-proto = "0.1.1"
tokio-service = "0.1"
rpc = { path = "../rpc-framework/rpc" }

[dev-dependencies]
bincode-transport = { path = "../rpc-framework/bincode-transport" }
chrono = "0.4"
env_logger = "0.5"
futures-cpupool = "0.1"
clap = "2.0"
serde_bytes = "0.10"
tokio = "0.1"

[target.'cfg(target_os = "macos")'.dev-dependencies]
security-framework = "0.2"

[features]
default = []
unstable = ["serde/unstable"]

[workspace]
