cargo-features = ["edition"]

[package]
name = "tarpc"
version = "0.12.1"
authors = ["Adam Wright <adam.austin.wright@gmail.com>", "Tim Kuehn <timothy.j.kuehn@gmail.com>"]
edition = "2018"
license = "MIT"
documentation = "https://docs.rs/tarpc"
homepage = "https://github.com/google/tarpc"
repository = "https://github.com/google/tarpc"
keywords = ["rpc", "network", "server", "api", "tls"]
categories = ["asynchronous", "network-programming"]
readme = "README.md"
description = "An RPC framework for Rust with a focus on ease of use."

[badges]
travis-ci = { repository = "google/tarpc" }

[dependencies]
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
tarpc-plugins = { path = "src/plugins", version = "0.4.0" }
rpc = { path = "../rpc-framework/rpc" }

[target.'cfg(not(test))'.dependencies]
futures-preview = { git = "https://github.com/rust-lang-nursery/futures-rs" }

[dev-dependencies]
humantime = "1.0"
futures-preview = { git = "https://github.com/rust-lang-nursery/futures-rs", features = ["compat", "tokio-compat"] }
bincode-transport = { path = "../rpc-framework/bincode-transport" }
env_logger = "0.5"
tokio = "0.1"

[workspace]
