[package]
name = "tarpc-lib"
version = "0.6.1"
authors = ["Tim Kuehn <tikue@google.com>"]
edition = '2018'
license = "MIT"
documentation = "https://docs.rs/tarpc-lib"
homepage = "https://github.com/google/tarpc"
repository = "https://github.com/google/tarpc"
keywords = ["rpc", "network", "server", "api", "microservices"]
categories = ["asynchronous", "network-programming"]
readme = "../README.md"
description = "An RPC framework for Rust with a focus on ease of use."

[features]
default = []
serde1 = ["trace/serde", "serde", "serde/derive"]
tokio1 = ["tokio"]

[dependencies]
fnv = "1.0"
futures-preview = { version = "0.3.0-alpha.18" }
humantime = "1.0"
log = "0.4"
pin-utils = "0.1.0-alpha.4"
raii-counter = "0.2"
rand = "0.7"
tokio-timer = "0.3.0-alpha.4"
trace = { package = "tarpc-trace", version = "0.2", path = "../trace" }
serde = { optional = true, version = "1.0" }
tokio = { optional = true, version = "0.2.0-alpha.4" }

[dev-dependencies]
futures-test-preview = { version = "0.3.0-alpha.18" }
env_logger = "0.6"
assert_matches = "1.0"
